[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Austin Davis-Richardson <harekrishna@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
python-telegram-bot = "^13.1"
yelpapi = "^2.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
